# photon

./: .gitignore  .markdownlint.json  AGENTS.md  Cargo.toml  Character of the Explorer.md  Dockerfile  README.md  VAGINA.md  docker-compose.yml  iron.code-workspace  justfile  quartz.config.yaml  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml
compiler/: AGENTS.md  Cargo.toml  build.rs
compiler/src/: ast.rs  iron.gram  lib.rs  semantic.rs
compiler/src/backend/: eval.rs  wasm.rs
docs/: index.md
parser/: Cargo.toml
parser/src/: bindings.rs  lexer.rs  lib.rs
parser/wit/: world.wit
src/: lib.rs  main.rs
src/commands/: build.rs  completion.rs  foo.rs  manifesto.rs  run.rs
src/commands/porcelain/: compile.rs
